--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -41,7 +41,15 @@
                         </i>
                     </a>
                 </li>
-                @* <li class="sidebar-item">
+                    <li class="sidebar-item">
+                        <a href="/ProdData/Prod_data" class="sidebar-link">
+                            <i class="lni lni-protection">
+                                <span>Production Details</span>
+                            </i>
+                        </a>
+                    </li>
+
+                <li class="sidebar-item" style="display:none;">
                     <a href="#" class="sidebar-link has-dropdown collapsed" data-bs-toggle="collapse" data-bs-target="#auth" aria-expanded="false" aria-controls="auth">
                         <i class="lni lni-protection">
                             <span>Auth</span>
@@ -57,7 +65,7 @@
                         </ul>
                     
                 </li>
-                <li class="sidebar-item">
+                    <li class="sidebar-item" style="display:none;">
                     <a href="#" class="sidebar-link has-dropdown collapsed" data-bs-toggle="collapse" data-bs-target="#multi" aria-expanded="false" aria-controls="multi">
                         <i class="lni lni-layout">
                             <span>Multi Level</span>
@@ -80,20 +88,20 @@
                         </li>
                     </ul>
                     </li>
-                <li class="sidebar-item">
+                    <li class="sidebar-item" style="display:none;">
                     <a href="#" class="sidebar-link">
                         <i class="lni lni-popup">
                             <span>Notification</span>
                         </i>
                     </a>
                 </li>
-                <li class="sidebar-item">
+                    <li class="sidebar-item" style="display:none;">
                     <a href="Home/Index" class="sidebar-link">
                         <i class="lni lni-cog">
                             <span>settings</span>
                         </i>
                     </a>
-                </li> *@
+                </li>
             </ul>
             <div class="sidebar-footer">
                 <a href="#" class="sidebar-link">
