--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                     </a>
                 </li>
                     <li class="sidebar-item">
-                        <a href="/ProdData/Prod_data" class="sidebar-link">
+                        <a href="/ProdData/ProdData" class="sidebar-link">
                             <i class="lni lni-protection">
                                 <span>Production Details</span>
                             </i>
