--- a/Fuji-I/Views/MainPage/shiftReport.cshtml
+++ b/Fuji-I/Views/MainPage/shiftReport.cshtml
@@ -986,7 +986,7 @@
                 type: 'bar', // Change type to line chart
                 data: cyctChart1,
                 options: cyctoptions1,
-                plugins: [alwaysShowToolTip]
+                //plugins: [alwaysShowToolTip]
             });
 
 
@@ -1046,7 +1046,7 @@
                 type: 'bar', // Change type to line chart
                 data: cyctChart2,
                 options: cyctoptions2,
-                plugins: [alwaysShowToolTip]
+                //plugins: [alwaysShowToolTip]
             });
 
         // // Update the chart to reflect changes
@@ -1110,7 +1110,7 @@
                 type: 'bar', // Change type to line chart
                 data: cyctChart3,
                 options: cyctoptions3,
-                plugins: [alwaysShowToolTip]
+                //plugins: [alwaysShowToolTip]
             });
 
            
