--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -117,8 +117,11 @@
                     <div class="col-lg-4">
                     <img src="~/images/download.png" style="width:40%;"  />
                     </div>
-                     <div class="col-lg-6">
+                     <div class="col-lg-6" style="padding-left:10%;">
                                 <h2><u>Shift Report</u></h2>
+                      </div>
+                      <div class="col-lg-2" style="text-align:right;">
+                            <a href="/Login/Login"><b>Log Out</b></a>
                       </div>
                 
                
