Chart for work_order,Daily output

--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -49,6 +49,22 @@
                         </a>
                     </li>
 
+                    <li class="sidebar-item">
+                        <a href="/ProdData/WorkOrder" class="sidebar-link">
+                            <i class="lni lni-layout">
+                                <span>WorkOrder Details</span>
+                            </i>
+                        </a>
+                    </li>
+
+                    <li class="sidebar-item">
+                        <a href="/ProdData/Dailyreport" class="sidebar-link">
+                            <i class="lni lni-cog">
+                                <span>Daily_Report_Details</span>
+                            </i>
+                        </a>
+                    </li>
+
                 <li class="sidebar-item" style="display:none;">
                     <a href="#" class="sidebar-link has-dropdown collapsed" data-bs-toggle="collapse" data-bs-target="#auth" aria-expanded="false" aria-controls="auth">
                         <i class="lni lni-protection">
