Stacked bar chart to bar chart

--- a/Fuji-I/Views/ProdData/ViewGrid.cshtml
+++ b/Fuji-I/Views/ProdData/ViewGrid.cshtml
@@ -202,14 +202,14 @@
             options: {
                 scales: {
                     x: {
-                        stacked: true,
+                        // stacked: true,
                         title: {
                             display: true,
                             text: 'Date & Hour'
                         }
                     },
                     y: {
-                        stacked: true,
+                        // stacked: true,
                         title: {
                             display: true,
                             text: 'Values'
