Forget Password functionality added

--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         </i>    
                     </a>
                 </li>
-                <li class="sidebar-item">
+                    <li class="sidebar-item" style="display:none;">
                         <a href="#" class="sidebar-link">
                         <i class="lni lni-agenda">
                             <span>Cycle Time</span>
