--- a/Fuji-I/Views/Login/Login.cshtml
+++ b/Fuji-I/Views/Login/Login.cshtml
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" id="btnClose" data-dismiss="modal">Close</button>
+                <button type="button"  class="btn btn-secondary" id="btnClose" data-dismiss="modal">Close</button>
                 <button type="button" id="btnSaveChanges" class="btn btn-primary">Save changes</button>
             </div>
         </div>
@@ -102,6 +102,9 @@
                 userValidation();
             }
         });
+    });
+    $('#btnClose').on('click', function () {
+        $('#myModal').modal('hide');
     });
     $('#btnSaveChanges').on('click', function () {
       
