--- a/Fuji-I/Views/Login/Login.cshtml
+++ b/Fuji-I/Views/Login/Login.cshtml
@@ -25,7 +25,7 @@
                                 <input type="password" id="txtpassword" class="form-control _ge_de_ol" placeholder="Enter Password" required aria-required="true" />
                             </div>
                             <div class="checkbox form-group">
-                                <div class="form-check">
+                                <div class="form-check" style="display:none;">
                                     <input class="form-check-input" type="checkbox" />
                                     <label class="form-check-label">Remember me</label>
                                 </div>
