--- a/Fuji-I/Views/MainPage/shiftReport.cshtml
+++ b/Fuji-I/Views/MainPage/shiftReport.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "shiftReport";
 }
+debugger;
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>  
 
