--- a/Fuji-I/Views/ProdData/ProdData.cshtml
+++ b/Fuji-I/Views/ProdData/ProdData.cshtml
@@ -16,11 +16,11 @@
                 <table class="table table-bordered table-striped">
                     <thead>
                         <tr>
-                            <th>Date</th>
-                            <th>Hour</th>
-                            <th>FG Name</th>
-                            <th>Target</th>
-                            <th>Actual</th>
+                            <th>DATE</th>
+                            <th>HOUR_INTERVAL</th>
+                            <th>WORKORDER</th>
+                            <th>FG NAME</th>
+                            <th>PCB COUNT </th>
                         </tr>
                     </thead>
                     <tbody>
@@ -30,11 +30,17 @@
                                 @foreach (var item in Model)
                                 {
                                 <tr>
-                                    <td>@item.CurrentDate</td>
+@*                                     <td>@item.CurrentDate</td>
                                     <td>@item.Hour</td>
                                     <td>@item.FG_Name</td>
                                     <td>@item.Target</td>
-                                    <td>@item.Actual</td>
+                                    <td>@item.Actual</td> *@
+
+                                    <td>@item.CurrentDate</td>
+                                    <td>@item.Hour</td>
+                                    <td>@item.WorkOrder</td>
+                                    <td>@item.FG_Name</td>
+                                    <td>@item.PCB_COUNT</td>
                                 </tr>
                                 }
 
