--- a/Fuji-I/Views/ProdData/ViewGrid.cshtml
+++ b/Fuji-I/Views/ProdData/ViewGrid.cshtml
@@ -173,9 +173,11 @@
             }
         };
 
-        const labels = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Select(data => $"{data.Date:yyyy-MM-dd} {data.Hour}:00")));
-        const actualValues = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Select(data => data.Actual)));
-        const targetValues = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Select(data => data.Target)));
+        // const labels = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Select(data => $"{data.Date} {data.Hour}")));
+        const labels = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Select(data => $"{data.FG_Name} {data.Hour}")));
+
+        const actualValues = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Select(data => data.PCB_COUNT)));
+         // const targetValues = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Select(data => data.Target)));
 
         const ctx = document.getElementById('HourlyBarChart').getContext('2d');
         const myBarChart = new Chart(ctx, {
@@ -190,13 +192,13 @@
                         borderColor: 'rgba(75, 192, 192, 1)',
                         borderWidth: 1
                     },
-                    {
-                        label: 'Target',
-                        data: targetValues,
-                        backgroundColor: 'rgba(255, 99, 132, 0.8)',
-                        borderColor: 'rgba(255, 99, 132, 1)',
-                        borderWidth: 1
-                    }
+                    // {
+                    //     label: 'Target',
+                    //     data: targetValues,
+                    //     backgroundColor: 'rgba(255, 99, 132, 0.8)',
+                    //     borderColor: 'rgba(255, 99, 132, 1)',
+                    //     borderWidth: 1
+                    // }
                 ]
             },
             options: {
