--- a/Fuji-I/Views/MainPage/shiftReport.cshtml
+++ b/Fuji-I/Views/MainPage/shiftReport.cshtml
@@ -2,7 +2,6 @@
 @{
     ViewData["Title"] = "shiftReport";
 }
-debugger;
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>  
 
@@ -23,7 +22,7 @@ debugger;
     });
 </script>
 
-<div style="padding-top:2%;">
+<div style="padding-top:2%;width:100%;">
 <div class="container">
      <div class="row">
             <div class="col-lg-4">
