--- a/Fuji-I/Views/ProdData/Dailyreport.cshtml
+++ b/Fuji-I/Views/ProdData/Dailyreport.cshtml
@@ -3,6 +3,18 @@
     ViewData["Title"] = "Daily_Report_data";
 }
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>DataTable Example</title>
+    <script src="~/js/datatable.js"></script>
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+
+</head>
+<body>
 
 <div class="container mt-3">
     <h2 style="padding:1%;">Daily Production Report</h2>
@@ -11,9 +23,9 @@
         <div class="row">
             <div class="col-lg-12">
                 <div style="height:250px">
-                    <div style="height:420px;overflow-x:scroll;">
-                        
-                <table class="table table-bordered table-striped">
+                    <div style="height:300px;overflow-x:scroll;">
+
+                  <table id="tblDailyReport" class="table table-bordered table-striped" >
                     <thead>
                         <tr>
                             <th>CurrentDate</th>
@@ -44,11 +56,11 @@
                       
                     </tbody>
                 </table>
-                    </div>
+                </div>
                 </div>
             </div>
         </div>
-        <div class="row" style="padding-top:15%;">
+        <div class="row" style="padding-top:10%;">
             <div class="col-lg-12" style="text-align:right;">
                 <input type="submit" class="btn btn-primary" id="btnViewGrid" name="View Grid2" value="View Grid"/>
             </div>
@@ -57,4 +69,19 @@
     </section>
 
 </div>
+</body>
+</html>
 
+<script>
+    $(document).ready(function () {
+        debugger;
+        // Initialize DataTable
+        $('#tblDailyReport').DataTable({
+            // Optional configurations
+            paging: true,    // Enable pagination
+            searching: true, // Enable search
+            ordering: true,  // Enable column ordering
+            order: [[1, 'asc']] // Default sorting (1st column, ascending)
+        });
+    });
+</script>
